1999-08-26  Jim Wilson  <wilson@cygnus.com>

	* readelf.c (display_debug_lines, case default): Change second line
	setting	adv to use = not +=.

1999-08-19  Nick Clifton  <nickc@cygnus.com>

	* dlltool.c: Added more examples to the comment at the start.

1999-08-18  Nick Clifton  <nickc@cygnus.com>

	* dlltool.c (make_head): Only emit interworking directive if
	necessary. 

Thu Jul 15 22:44:21 1999  Hans-Peter Nilsson  <hp@bitrange.com>

	* readelf.c (process_abbrev_section): Handle standard-conforming
	single zero at the end of the section.

1999-08-09  Ian Lance Taylor  <ian@zembu.com>

	* objdump.c (exit_status): New static variable.
	(nonfatal): New static function.
	(disassemble_data): Set exit_status on error.
	(read_section_stabs): Likewise.
	(display_bfd): Likewise.  Call nonfatal rather than bfd_nonfatal.
	(display_file): Call nonfatal rather than bfd_nonfatal.
	(display_target_list, display_info_table): Likewise.
	(main): Return exit_status rather than 0.

1999-08-08  Ian Lance Taylor  <ian@zembu.com>

	* objdump.c (dump_section_header): Update for renaming of
	SEC_SHORT to SEC_SMALL_DATA.  Print SEC_SHARED flag.

	From Eli Zaretskii <eliz@gnu.org>:
	* binutils.texi: Document cxxfilt as MS-DOS name for c++filt.

	* configure.in: Define and substitute DEMANGLER_NAME.
	* Makefile.am (DEMANGLER_PROG): Set to cxxfilt.
	(man_MANS): Use DEMANGLER_NAME rather than DEMANGLER_PROG.
	(bin_PROGRAMS): Remove $(DEMANGLER_PROG).
	(noinst_PROGRAMS): Add $(DEMANGLER_PROG).
	(cxxfilt_SOURCES): Rename from c__filt_SOURCES.
	(cxxfilt_LDADD): Rename from c__filt_LDADD.
	($(DEMANGLER_NAME).1): Rename from $(DEMANGLER_PROG).1.  Use
	DEMANGLER_NAME rather than DEMANGLER_PROG in substitution.
	(MOSTLYCLEANFILES): Use DEMANGLER_NAME rather than
	DEMANGLER_PROG.
	(install-exec-local): When installing noinst_PROGRAMS, change
	cxxfilt to $(DEMANGLER_NAME).
	* configure, Makefile.in: Rebuild.

	* Makefile.am: Rename .dep* files to DEP*.  Change DEP variable to
	MKDEP.